<resources>
    <string name="app_name">Boba Tracker v. 0.0.1</string>
    <string name="boba_ntracker">Boba\nTracker</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="view_history">View History</string>
    <string name="add_order">Add Order</string>
    <string name="appName">Boba Tracker</string>
    <string name="usernameTitle">username</string>
    <string name="show_password_button">Show</string>
    <string name="hide_password_button">Hide</string>
    <string name="button_login_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="incorrectUsernamePassword">Incorrect Username and/or Password</string>
    <string name="order_history">Order History</string>
    <string name="favorite_orders">Favorite Orders</string>
    <string name="log_out">Sign Out</string>
    <string name="order_history_title">Order History</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="store_name_hint">i.e. Brie\'s Boba</string>
    <string name="order_details_hint">i.e. Lychee Black Tea, L, Half Sweet</string>
    <string name="date_edit_text_hint">i.e. 5/6/20</string>
    <string name="price_edit_text_hint">i.e. 4.75</string>
    <string name="add_order_button">Add</string>
    <string name="star_symbol">★</string>
</resources>