<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".login_page.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_add_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_order_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_favorite_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        />

    <Button
        android:id="@+id/button_add_order"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/peach_rounded_button"
        android:fontFamily="@font/montserrat_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/add_order"
        android:textAllCaps="false"
        android:textColor="@color/gray1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_add_order"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/button_order_history"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/white_rounded_button"
        android:fontFamily="@font/montserrat_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/order_history"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_order_history"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/button_favorite_orders"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/white_rounded_button"
        android:fontFamily="@font/montserrat_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/favorite_orders"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_favorite_orders"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/gray1"
        android:textSize="15sp"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintRight_toLeftOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/guide_log_out"
        />


</androidx.constraintlayout.widget.ConstraintLayout>