<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_title_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_username_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_email_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_password_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView_signup_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toTopOf="@id/guide_title_start"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.8"
        android:textSize="60sp"
        android:textColor="@color/gray1"
        android:gravity="center"
        android:fontFamily="@font/montserrat_medium"
        />

    <EditText
        android:id="@+id/username_entry"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:inputType="textLongMessage"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gray3"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_username_start"
        app:layout_constraintWidth_percent="0.8"
        android:fontFamily="@font/montserrat_medium"/>

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="80dp"
        android:textColor="@color/gray3"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_email_start"
        app:layout_constraintWidth_percent="0.8"
        android:fontFamily="@font/montserrat_medium" />

    <EditText
        android:id="@+id/repeat_password_entry"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gray3"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_password_start"
        app:layout_constraintWidth_percent="0.8"
        android:fontFamily="@font/montserrat_medium" />

    <Button
        android:id="@+id/button_confirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/peach_rounded_button"
        android:fontFamily="@font/montserrat_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/gray1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_button_confirm"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/login_error2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/button_confirm"
        app:layout_constraintWidth_percent=".8"
        android:fontFamily="@font/montserrat_medium" />

    <Button
        android:id="@+id/button_show_password2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/show_password_button"
        android:textAllCaps="false"
        android:textColor="@color/peach"
        app:layout_constraintBottom_toBottomOf="@id/password_entry"
        app:layout_constraintEnd_toEndOf="@id/password_entry"
        app:layout_constraintTop_toTopOf="@id/password_entry"
        android:fontFamily="@font/montserrat_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>