<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/top_guideline_1"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        android:textColor="@color/gray1"
        android:textSize="50sp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/add_order"
        />

    <!--Store Name-->
    <EditText
        android:id="@+id/store_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/top_guideline_2"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        android:textColor="@color/black"
        android:hint="@string/store_name_hint"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="bottom|right"
        tools:ignore="RtlHardcoded"
        android:inputType="textPersonName"
        android:autofillHints=""
        />

    <!--Order Details-->
    <EditText
        android:id="@+id/order_details_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/top_guideline_3"
        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintWidth_percent="0.8"
        android:textColor="@color/black"
        android:hint="@string/order_details_hint"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="bottom|right"
        tools:ignore="RtlHardcoded"
        android:inputType="textPersonName"
        android:autofillHints=""
        />

    <EditText
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/date_entry"
        android:gravity="bottom|right"
        android:hint="@string/date_edit_text_hint"
        android:focusable="false"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintTop_toTopOf="@id/top_guideline_4"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:inputType="none"
        android:autofillHints=""
        tools:ignore="LabelFor,RtlHardcoded,TextFields"
        />

    <EditText
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/price_entry"
        android:hint="@string/price_edit_text_hint"
        android:gravity="bottom|right"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintTop_toTopOf="@id/top_guideline_4"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:inputType="numberDecimal"
        android:autofillHints=""
        tools:ignore="LabelFor,RtlHardcoded,TextFields"
        />

    <EditText
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/size_entry"
        android:hint="@string/size_hint"
        android:gravity="bottom|right"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintTop_toTopOf="@id/top_guideline_4"
        app:layout_constraintStart_toStartOf="@id/guideline_mid"
        android:inputType="numberDecimal"
        android:autofillHints=""
        tools:ignore="LabelFor,RtlHardcoded,TextFields"
        />

</androidx.constraintlayout.widget.ConstraintLayout>